[gd_scene load_steps=6 format=3 uid="uid://bo0bcjocg7r2i"]

[ext_resource type="Script" path="res://entities/weapon/Bullet.gd" id="1_t650d"]
[ext_resource type="PackedScene" uid="uid://ccnrs46mefww5" path="res://effects/bullet_effect.tscn" id="2_mjqci"]
[ext_resource type="Texture2D" uid="uid://b71ql48kyfphg" path="res://assets/objects/bullet.png" id="3_roqev"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8dlm1"]
radius = 15.0

[sub_resource type="CanvasTexture" id="CanvasTexture_jxuvw"]
diffuse_texture = ExtResource("3_roqev")

[node name="Bullet" type="Area2D" groups=["bullet"]]
script = ExtResource("1_t650d")
ShotVFX = ExtResource("2_mjqci")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.16, 1.68)
shape = SubResource("CircleShape2D_8dlm1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.5, 0.999999)
scale = Vector2(0.477273, 0.733333)
texture = SubResource("CanvasTexture_jxuvw")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
